--- a/css/Index.css
+++ b/css/Index.css
@@ -87,7 +87,7 @@
 .section-bg-item {
     width: 45.666667% !important;
     height: 294px;
-    background-image: url(https://scontent.fsgn2-4.fna.fbcdn.net/v/t1.15752-9/275468426_289867269952763_6152099595206224338_n.png?_nc_cat=109&ccb=1-5&_nc_sid=ae9488&_nc_ohc=oFDn-3u_JY0AX8LkNcb&_nc_ht=scontent.fsgn2-4.fna&oh=03_AVI33U2_E_L0ixV9gIJUYXi346LtiCp7j0JEfjmy4Z3HNg&oe=6256226B);
+    background-image: url(https://scontent.fpnh22-3.fna.fbcdn.net/v/t1.15752-9/275468426_289867269952763_6152099595206224338_n.png?_nc_cat=109&ccb=1-6&_nc_sid=ae9488&_nc_ohc=PAy3eGEqfXwAX_PP1VW&_nc_ht=scontent.fpnh22-3.fna&oh=03_AVKER1bVyd7lmZ859_S3_6bubfIud-TmJ8gDY3ZKp3BDXA&oe=62A53C6B);
 }
 .section-bg-item2 {
     width: 45.666667% !important;
@@ -441,4 +441,23 @@
 }
 .cart-item-i{
     text-decoration: none;
+}
+
+
+.cart-hover {
+    position: absolute;
+    right: -70px;
+    top: 100px;
+    width: 350px;
+    background: #ffffff;
+    z-index: 99;
+    text-align: left;
+    padding: 30px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-box-shadow: 0 13px 32px rgb(51 51 51 / 10%);
+    box-shadow: 0 13px 32px rgb(51 51 51 / 10%);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
